--- a/index.html
+++ b/index.html
@@ -54,19 +54,20 @@
     <section class="experiencia" id="experiencia" aria-label="Experiência">
         <h2 class="subtitulo">Experiência</h2>
         <div>
-            <p class="experiencia-texto">Atualmente desenvolvo pequenas aplicações utilizando apenas <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong> no <strong>Front End</strong> e com <strong>Node.Js</strong> e <strong>PHP</strong> no <strong>Back End</strong>. Abaixo relaciono a lista dos meus cinco mais importantes projetos até o momento.</p>
+            <p class="experiencia-texto">Atualmente desenvolvo pequenas aplicações utilizando apenas <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong> no <strong>Front-End</strong> e com <strong>Node.Js</strong> e <strong>PHP</strong> no <strong>Back-End</strong>. Abaixo relaciono a lista dos meus mais recentes projetos até o momento.</p>
 
             <div class="empresa">
                 <span class="empresa-ano">Dez-2021</span>
                 <h3 class="empresa-titulo">App Landing page</h3>
                 <span class="empresa-titulo"><a href="https://github.com/dbastosdev/lista-contatos-nodejs">github</a></span>
-                <p class="empresa-texto">Sistema web de Landing page, com área administrativa protegida por seções com login e senha, para captura, segmentação e envio de e-mails feito com Node.js no padrão MVC</p>
+                <p class="empresa-texto">Aplicação web de Landing page, com área administrativa protegida por seções com login e senha, para captura, segmentação e envio de e-mails feito com Node.js no padrão MVC</p>
                 <ul class="empresa-habilidades">
                     <li>Node.Js</li>
                     <li>Express</li>
                     <li>Express-session</li>
                     <li>Nodemailer</li>
                     <li>Bootstrap</li>
+                    <li>Gráficos</li>
                     <li>MySQL</li>
                 </ul>
             </div>
@@ -75,7 +76,7 @@
                 <span class="empresa-ano">Nov-2021</span>
                 <h3 class="empresa-titulo">Sinapi Bot</h3>
                 <span class="empresa-titulo"><a href="https://github.com/dbastosdev/sinapi-bot-nodejs">github</a></span>
-                <p class="empresa-texto">Sistema web scrapper em linha de comando que busca e envia as últimas atualizações do banco de dados de preço do governo SINAPI e os envia por e-mail.</p>
+                <p class="empresa-texto">Aplicação web scrapper em linha de comando que busca e envia as últimas atualizações do banco de dados de preço do governo SINAPI e os envia por e-mail.</p>
                 <ul class="empresa-habilidades">
                     <li>Node.Js</li>
                     <li>Puppeteer</li>
@@ -87,7 +88,7 @@
                 <span class="empresa-ano">Nov-2021</span>
                 <h3 class="empresa-titulo">Lista de contatos</h3>
                 <span class="empresa-titulo"><a href="https://github.com/dbastosdev/lista-contatos-nodejs">github</a></span>
-                <p class="empresa-texto">Sistema de lista de contatos com funcionalidades CRUD e persistência de dados em arquivos JSON.</p>
+                <p class="empresa-texto">SAplicação de lista de contatos com funcionalidades CRUD e persistência de dados em arquivos JSON.</p>
                 <ul class="empresa-habilidades">
                     <li>Node.Js</li>
                     <li>Express</li>
@@ -130,8 +131,8 @@
                     <div class="cursos">
                         <h3>Cursos Intensivos</h3>
                         <ul>
-                            <li>Formação em Javascript para Back End <span>56h</span></li>
-                            <li>Formação Node.Js <span>72h</span></li>
+                            <li>Formação em Javascript para Back End - Alura<span>40h</span></li>
+                            <li>Formação Node.Js - Alura<span>110h</span></li>
                         </ul>
                     </div>
                     <div class="idiomas">
