--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <span class="empresa-ano">Nov-2021</span>
                 <h3 class="empresa-titulo">Lista de contatos</h3>
                 <span class="empresa-titulo"><a href="https://github.com/dbastosdev/lista-contatos-nodejs">github</a></span>
-                <p class="empresa-texto">SAplicação de lista de contatos com funcionalidades CRUD e persistência de dados em arquivos JSON.</p>
+                <p class="empresa-texto">Aplicação de lista de contatos com funcionalidades CRUD e persistência de dados em arquivos JSON.</p>
                 <ul class="empresa-habilidades">
                     <li>Node.Js</li>
                     <li>Express</li>
