atualizações de links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Código para encode da página, faz não criar caracteres estranhos no html-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dbastos.dev Engenheiro e Desenvolvedor Web 👨🏾‍💻</title>
+    <title>dbastos.dev Engenheiro & Desenvolvedor Web 👨🏾‍💻</title>
     <!-- SEO meta tag description-->
     <meta name="description" content="Engenheiro &Desenvolvedor Web.">
     <!-- Arquivo de link com o css do site-->
@@ -155,11 +155,11 @@
             </p>
             <ul class="footer-contato">
                 <li>dbastos.dev@gmail.com</li>
-                <li><a href="https://github.com/dbastosdev">github</a></li>
-                <li><a href="https://medium.com/@dbastos.dev">medium</a></li>
-                <li><a href="https://www.linkedin.com/in/douglas-b-5a7413219/">Linkedin</a></li>
+                <li><a href="https://github.com/dbastosdev" target="_blank">github</a></li>
+                <li><a href="https://medium.com/@dbastos.dev" target="_blank">medium</a></li>
+                <li><a href="https://www.linkedin.com/in/douglas-b-5a7413219/" target="_blank">linkedin</a></li>
             </ul>
-            <p class="footer-copy"> Feito com muito ☕ por dbastos.dev - Licença MIT </p>
+            <p class="footer-copy"> Feito com muito ☕ por dbastos.dev </p>
         </div>
     </footer>
 </body>
