--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="experiencia" id="experiencia" aria-label="Experiência">
         <h2 class="subtitulo">Experiência</h2>
         <div>
-            <p class="experiencia-texto">Atualmente desenvolvo pequenas aplicações utilizando apenas <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong> no <strong>Front-End</strong> e com <strong>Java</strong> e <strong>PHP</strong> no <strong>Back-End</strong>. Abaixo relaciono a lista dos meus mais recentes projetos até o momento.</p>
+            <p class="experiencia-texto">Atualmente desenvolvo pequenas aplicações utilizando apenas <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong> no <strong>Front-End</strong> e com <strong>PHP</strong> no <strong>Back-End</strong>. Abaixo relaciono a lista dos meus mais recentes projetos até o momento.</p>
 
             <div class="empresa">
                 <span class="empresa-ano">Dez-2021</span>
